# TASTE-SAMV71-RTEMS-Runtime

./: .clang-format  .gitmodules  README.md  install.sh
linker_script/: linkcmds.base  linkcmds.intsram
src/: BootHelper.c  CMakeLists.txt  CustomExceptionVector.c  DeathReport.h  DeathReportWriter.c  FaultHandler.c  FaultHandler.h  Hal.c  Hal.h  Monitor.c  Monitor.h  ThreadsCommon.c  ThreadsCommon.h
src/BootHelper/: BootHelper.c  BootHelper.h  CMakeLists.txt
src/BrokerLock/: BrokerLock.c  BrokerLock.h  CMakeLists.txt
src/FaultHandler/: CMakeLists.txt  CustomExceptionVector.c  DeathReportWriter.c  DeathReportWriter.h
src/Hal/: CMakeLists.txt  Hal.c  Hal.h
src/Mocks/: CMakeLists.txt  interfaces_info.c  interfaces_info.h
src/Monitor/: CMakeLists.txt  Monitor.c
src/SamV71Core/: CMakeLists.txt  SamV71Core.c  SamV71Core.h
src/ThreadsCommon/: CMakeLists.txt  ThreadsCommon.c  ThreadsCommon.h
src/Xdmac/: CMakeLists.txt  xdma_hardware_interface.c  xdma_hardware_interface.h  xdmac.c  xdmac.h  xdmad.c  xdmad.h
src/app/: CMakeLists.txt  main.c
toolchains/: samv71.cmake
